@@ -517,6 +517,11 @@ mba_surface_interpolation.m
 
 	 MBA_SURFACE_INTERPOLATION  Scattered data Multilevel B-spline interpolation
 	
+pca_align.m
+
+	 PCA_ALIGN  Align a set of points so that its centroid is zero, and the
+	 Principal Components correspond to the Cartesian axes
+	
 pca_normalize.m
 
 	 PCA_NORMALIZE  Normalize a set of points so that its centroid is zero,the
